--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,7 @@ management.endpoints.web.base-path=/manage
 
 spring.datasource.url=jdbc:postgresql://mydbpostgre.cjafcccewaug.us-east-2.rds.amazonaws.com:5432/mydbpostgre?user=zikboy&password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=mydbpostgre
+spring.datasource.username=zikboy
 spring.datasource.password=12345678
 
 
